syntax = "proto3";

package product;

import "google/protobuf/empty.proto";
import "common.proto";

option go_package = "github.com/DENFNC/Zappy/catalog_service/proto/gen/v1;v1";

message GetProductRequest {
  common.ResourceID product_id = 1;
}

message GetProductResponse {
  common.ResourceID product_id = 1;
}

message ListProductsRequest {
  common.Pagination pagination  = 1;
  string          query         = 2;
  repeated string category_ids  = 3;
}

message ListProductsResponse {
  repeated Product    products   = 1;
  common.Pagination   pagination = 2;
}

message CreateProductRequest {
  string          name          = 1;
  optional string description   = 2;
  int64           price_cents   = 3;
  string          currency      = 4;
  repeated string category_ids  = 5;
}

message CreateProductResponse {
  common.ResourceID product_id = 1;
}

message UpdateProductRequest {
  string product_id = 1;
  optional string name = 2;
  optional string description = 3;
  optional int64  price_cents = 4;
  optional string currency = 5;
  repeated string category_ids = 6;
  optional bool   is_active = 7;
}

message UpdateProductResponse {
  Product product = 1;
}

message DeleteProductRequest {
  string product_id = 1;
}

message DeleteProductResponse {
  // empty response
}

message Product {
  string          id           = 1;
  string          name         = 2;
  string          description  = 3;
  int64           price_cents  = 4;
  string          currency     = 5;
  repeated string category_ids = 6;
  bool            is_active    = 7;
  string          created_at   = 8;
  string          updated_at   = 9;
}

service ProductService {
  rpc GetProduct    (GetProductRequest)    returns (GetProductResponse);
  rpc ListProducts  (ListProductsRequest)  returns (ListProductsResponse);
  rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse);
  rpc UpdateProduct (UpdateProductRequest) returns (UpdateProductResponse);
  rpc DeleteProduct (DeleteProductRequest) returns (google.protobuf.Empty);
}
